// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<transfer> demo: > render [basic] correctly 1`] = `
<div class="sd-transfer">
  <div class="sd-transfer-view sd-transfer-view-source">
    <div class="sd-transfer-view-header"><span class="sd-transfer-view-header-title"><label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Source</span></label></span><span class="sd-transfer-view-header-count">0 / 5</span></div>
    <!--v-if-->
    <div class="sd-transfer-view-body">
      <div class="sd-scrollbar sd-scrollbar-type-embed">
        <div class="sd-scrollbar-container" data-overlayscrollbars="host">
          <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
            <div class="sd-list-wrapper sd-transfer-view-list">
              <div class="sd-spin sd-list-spin">
                <div class="sd-scrollbar sd-scrollbar-type-embed">
                  <div class="sd-scrollbar-container sd-list sd-list-medium sd-list-split" data-overlayscrollbars="host">
                    <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
                      <div class="sd-list-content-wrapper">
                        <!---->
                        <div role="list" class="sd-list-content">
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option2"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 2</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option4"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 4</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option6"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 6</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option7"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 7</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option8"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 8</span></label>
                            <!---->
                          </div>
                          <!---->
                        </div>
                        <!---->
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                  </div>
                </div>
                <!---->
                <!---->
              </div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="sd-transfer-operations"><button class="sd-btn sd-btn-secondary sd-btn-shape-round sd-btn-size-small sd-btn-status-normal sd-btn-disabled sd-btn-only-icon" type="button" disabled="" tabindex="-1" aria-label="Move selected right"><span class="sd-btn-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="m16 39.513 15.556-15.557L16 8.4"></path></svg></span></button><button class="sd-btn sd-btn-secondary sd-btn-shape-round sd-btn-size-small sd-btn-status-normal sd-btn-disabled sd-btn-only-icon" type="button" disabled="" tabindex="-1" aria-label="Move selected left"><span class="sd-btn-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M32 8.4 16.444 23.956 32 39.513"></path></svg></span></button></div>
  <div class="sd-transfer-view sd-transfer-view-target">
    <div class="sd-transfer-view-header"><span class="sd-transfer-view-header-title"><label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Target</span></label></span><span class="sd-transfer-view-header-count">0 / 3</span></div>
    <!--v-if-->
    <div class="sd-transfer-view-body">
      <div class="sd-scrollbar sd-scrollbar-type-embed">
        <div class="sd-scrollbar-container" data-overlayscrollbars="host">
          <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
            <div class="sd-list-wrapper sd-transfer-view-list">
              <div class="sd-spin sd-list-spin">
                <div class="sd-scrollbar sd-scrollbar-type-embed">
                  <div class="sd-scrollbar-container sd-list sd-list-medium sd-list-split" data-overlayscrollbars="host">
                    <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
                      <div class="sd-list-content-wrapper">
                        <!---->
                        <div role="list" class="sd-list-content">
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option1"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 1</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option3"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 3</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option5"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 5</span></label>
                            <!---->
                          </div>
                          <!---->
                        </div>
                        <!---->
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                  </div>
                </div>
                <!---->
                <!---->
              </div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<transfer> demo: > render [custom] correctly 1`] = `
<div class="sd-transfer">
  <div class="sd-transfer-view sd-transfer-view-source">
    <div class="sd-transfer-view-header"><span class="sd-transfer-view-header-title"><label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Source</span></label></span><span class="sd-transfer-view-header-count">0 / 5</span></div>
    <!--v-if-->
    <div class="sd-transfer-view-body">
      <div class="sd-scrollbar sd-scrollbar-type-embed">
        <div class="sd-scrollbar-container" data-overlayscrollbars="host">
          <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
            <div class="sd-list-wrapper sd-transfer-view-list">
              <div class="sd-spin sd-list-spin">
                <div class="sd-scrollbar sd-scrollbar-type-embed">
                  <div class="sd-scrollbar-container sd-list sd-list-medium sd-list-split" data-overlayscrollbars="host">
                    <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
                      <div class="sd-list-content-wrapper">
                        <!---->
                        <div role="list" class="sd-list-content">
                          <div class="sd-transfer-list-item sd-transfer-list-item-disabled"><label aria-disabled="true" class="sd-checkbox sd-checkbox-disabled sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" disabled="" value="option2"><span class="sd-icon-hover sd-icon-hover-disabled sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-up" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 30.557 24.043 15 8.487 30.557"></path></svg> Option 2</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option4"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-up" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 30.557 24.043 15 8.487 30.557"></path></svg> Option 4</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option6"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-up" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 30.557 24.043 15 8.487 30.557"></path></svg> Option 6</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option7"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-up" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 30.557 24.043 15 8.487 30.557"></path></svg> Option 7</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option8"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-up" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 30.557 24.043 15 8.487 30.557"></path></svg> Option 8</span></label>
                            <!---->
                          </div>
                          <!---->
                        </div>
                        <!---->
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                  </div>
                </div>
                <!---->
                <!---->
              </div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="sd-transfer-operations"><button class="sd-btn sd-btn-secondary sd-btn-shape-round sd-btn-size-small sd-btn-status-normal sd-btn-disabled sd-btn-only-icon" type="button" disabled="" tabindex="-1" aria-label="Move selected right"><span class="sd-btn-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="m16 39.513 15.556-15.557L16 8.4"></path></svg></span></button><button class="sd-btn sd-btn-secondary sd-btn-shape-round sd-btn-size-small sd-btn-status-normal sd-btn-disabled sd-btn-only-icon" type="button" disabled="" tabindex="-1" aria-label="Move selected left"><span class="sd-btn-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M32 8.4 16.444 23.956 32 39.513"></path></svg></span></button></div>
  <div class="sd-transfer-view sd-transfer-view-target">
    <div class="sd-transfer-view-header"><span class="sd-transfer-view-header-title"><label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Target</span></label></span><span class="sd-transfer-view-header-count">0 / 3</span></div>
    <!--v-if-->
    <div class="sd-transfer-view-body">
      <div class="sd-scrollbar sd-scrollbar-type-embed">
        <div class="sd-scrollbar-container" data-overlayscrollbars="host">
          <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
            <div class="sd-list-wrapper sd-transfer-view-list">
              <div class="sd-spin sd-list-spin">
                <div class="sd-scrollbar sd-scrollbar-type-embed">
                  <div class="sd-scrollbar-container sd-list sd-list-medium sd-list-split" data-overlayscrollbars="host">
                    <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
                      <div class="sd-list-content-wrapper">
                        <!---->
                        <div role="list" class="sd-list-content">
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option1"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-up" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 30.557 24.043 15 8.487 30.557"></path></svg> Option 1</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option3"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-up" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 30.557 24.043 15 8.487 30.557"></path></svg> Option 3</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option5"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-up" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 30.557 24.043 15 8.487 30.557"></path></svg> Option 5</span></label>
                            <!---->
                          </div>
                          <!---->
                        </div>
                        <!---->
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                  </div>
                </div>
                <!---->
                <!---->
              </div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<transfer> demo: > render [custom-header] correctly 1`] = `
<div class="sd-transfer">
  <div class="sd-transfer-view sd-transfer-view-source">
    <div class="sd-transfer-view-header">
      <div class="sd:flex sd:items-center sd:justify-between sd:pr-2"> Source Title 0-5 <label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span>
          <!---->
        </label></div>
    </div>
    <!--v-if-->
    <div class="sd-transfer-view-body">
      <div class="sd-scrollbar sd-scrollbar-type-embed">
        <div class="sd-scrollbar-container" data-overlayscrollbars="host">
          <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
            <div class="sd-list-wrapper sd-transfer-view-list">
              <div class="sd-spin sd-list-spin">
                <div class="sd-scrollbar sd-scrollbar-type-embed">
                  <div class="sd-scrollbar-container sd-list sd-list-medium sd-list-split" data-overlayscrollbars="host">
                    <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
                      <div class="sd-list-content-wrapper">
                        <!---->
                        <div role="list" class="sd-list-content">
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option2"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 2</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option4"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 4</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option6"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 6</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option7"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 7</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option8"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 8</span></label>
                            <!---->
                          </div>
                          <!---->
                        </div>
                        <!---->
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                  </div>
                </div>
                <!---->
                <!---->
              </div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="sd-transfer-operations"><button class="sd-btn sd-btn-secondary sd-btn-shape-round sd-btn-size-small sd-btn-status-normal sd-btn-disabled sd-btn-only-icon" type="button" disabled="" tabindex="-1" aria-label="Move selected right"><span class="sd-btn-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="m16 39.513 15.556-15.557L16 8.4"></path></svg></span></button><button class="sd-btn sd-btn-secondary sd-btn-shape-round sd-btn-size-small sd-btn-status-normal sd-btn-disabled sd-btn-only-icon" type="button" disabled="" tabindex="-1" aria-label="Move selected left"><span class="sd-btn-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M32 8.4 16.444 23.956 32 39.513"></path></svg></span></button></div>
  <div class="sd-transfer-view sd-transfer-view-target">
    <div class="sd-transfer-view-header">
      <div class="sd:flex sd:items-center sd:justify-between sd:pr-2"> Target Title 0-3 <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-delete" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M5 11h5.5m0 0v29a1 1 0 0 0 1 1h25a1 1 0 0 0 1-1V11m-27 0H16m21.5 0H43m-5.5 0H32m-16 0V7h16v4m-16 0h16M20 18v15m8-15v15"></path>
        </svg></div>
    </div>
    <!--v-if-->
    <div class="sd-transfer-view-body">
      <div class="sd-scrollbar sd-scrollbar-type-embed">
        <div class="sd-scrollbar-container" data-overlayscrollbars="host">
          <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
            <div class="sd-list-wrapper sd-transfer-view-list">
              <div class="sd-spin sd-list-spin">
                <div class="sd-scrollbar sd-scrollbar-type-embed">
                  <div class="sd-scrollbar-container sd-list sd-list-medium sd-list-split" data-overlayscrollbars="host">
                    <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
                      <div class="sd-list-content-wrapper">
                        <!---->
                        <div role="list" class="sd-list-content">
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option1"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 1</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option3"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 3</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option5"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 5</span></label>
                            <!---->
                          </div>
                          <!---->
                        </div>
                        <!---->
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                  </div>
                </div>
                <!---->
                <!---->
              </div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<transfer> demo: > render [one-way] correctly 1`] = `
<div class="sd-transfer">
  <div class="sd-transfer-view sd-transfer-view-source">
    <div class="sd-transfer-view-header"><span class="sd-transfer-view-header-title"><label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Source</span></label></span><span class="sd-transfer-view-header-count">0 / 5</span></div>
    <!--v-if-->
    <div class="sd-transfer-view-body">
      <div class="sd-scrollbar sd-scrollbar-type-embed">
        <div class="sd-scrollbar-container" data-overlayscrollbars="host">
          <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
            <div class="sd-list-wrapper sd-transfer-view-list">
              <div class="sd-spin sd-list-spin">
                <div class="sd-scrollbar sd-scrollbar-type-embed">
                  <div class="sd-scrollbar-container sd-list sd-list-medium sd-list-split" data-overlayscrollbars="host">
                    <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
                      <div class="sd-list-content-wrapper">
                        <!---->
                        <div role="list" class="sd-list-content">
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option2"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 2</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option4"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 4</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option6"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 6</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option7"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 7</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option8"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 8</span></label>
                            <!---->
                          </div>
                          <!---->
                        </div>
                        <!---->
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                  </div>
                </div>
                <!---->
                <!---->
              </div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="sd-transfer-operations"><button class="sd-btn sd-btn-secondary sd-btn-shape-round sd-btn-size-small sd-btn-status-normal sd-btn-disabled sd-btn-only-icon" type="button" disabled="" tabindex="-1" aria-label="Move selected right"><span class="sd-btn-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="m16 39.513 15.556-15.557L16 8.4"></path></svg></span></button>
    <!--v-if-->
  </div>
  <div class="sd-transfer-view sd-transfer-view-target">
    <div class="sd-transfer-view-header"><span class="sd-transfer-view-header-title"><span class="sd-transfer-view-header-title-simple">Target</span></span><span class="sd-icon-hover sd-transfer-view-header-clear-btn"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-delete" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M5 11h5.5m0 0v29a1 1 0 0 0 1 1h25a1 1 0 0 0 1-1V11m-27 0H16m21.5 0H43m-5.5 0H32m-16 0V7h16v4m-16 0h16M20 18v15m8-15v15"></path></svg></span></div>
    <!--v-if-->
    <div class="sd-transfer-view-body">
      <div class="sd-scrollbar sd-scrollbar-type-embed">
        <div class="sd-scrollbar-container" data-overlayscrollbars="host">
          <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
            <div class="sd-list-wrapper sd-transfer-view-list">
              <div class="sd-spin sd-list-spin">
                <div class="sd-scrollbar sd-scrollbar-type-embed">
                  <div class="sd-scrollbar-container sd-list sd-list-medium sd-list-split" data-overlayscrollbars="host">
                    <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
                      <div class="sd-list-content-wrapper">
                        <!---->
                        <div role="list" class="sd-list-content">
                          <div class="sd-transfer-list-item"><span class="sd-transfer-list-item-content">Option 1</span><span class="sd-icon-hover sd-transfer-list-item-remove-btn"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span></div>
                          <div class="sd-transfer-list-item"><span class="sd-transfer-list-item-content">Option 3</span><span class="sd-icon-hover sd-transfer-list-item-remove-btn"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span></div>
                          <div class="sd-transfer-list-item"><span class="sd-transfer-list-item-content">Option 5</span><span class="sd-icon-hover sd-transfer-list-item-remove-btn"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span></div>
                          <!---->
                        </div>
                        <!---->
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                  </div>
                </div>
                <!---->
                <!---->
              </div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<transfer> demo: > render [pagination] correctly 1`] = `""`;

exports[`<transfer> demo: > render [search] correctly 1`] = `
<div class="sd-transfer">
  <div class="sd-transfer-view sd-transfer-view-source">
    <div class="sd-transfer-view-header"><span class="sd-transfer-view-header-title"><label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Source</span></label></span><span class="sd-transfer-view-header-count">0 / 5</span></div>
    <div class="sd-transfer-view-search"><span class="sd-input-wrapper sd-input-search"><!----><input class="sd-input sd-input-size-medium" type="text" placeholder="source item search" value=""><!----><span class="sd-input-suffix"><!----><span class="sd-icon-hover"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-search" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M33.072 33.071c6.248-6.248 6.248-16.379 0-22.627-6.249-6.249-16.38-6.249-22.628 0s-6.248 16.379 0 22.627 16.38 6.248 22.628 0Zm0 0 8.485 8.485"></path></svg></span>
      <!---->
      <!----></span></span>
    </div>
    <div class="sd-transfer-view-body">
      <div class="sd-scrollbar sd-scrollbar-type-embed">
        <div class="sd-scrollbar-container" data-overlayscrollbars="host">
          <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
            <div class="sd-list-wrapper sd-transfer-view-list">
              <div class="sd-spin sd-list-spin">
                <div class="sd-scrollbar sd-scrollbar-type-embed">
                  <div class="sd-scrollbar-container sd-list sd-list-medium sd-list-split" data-overlayscrollbars="host">
                    <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
                      <div class="sd-list-content-wrapper">
                        <!---->
                        <div role="list" class="sd-list-content">
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option2"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 2</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option4"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 4</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option6"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 6</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option7"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 7</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option8"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 8</span></label>
                            <!---->
                          </div>
                          <!---->
                        </div>
                        <!---->
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                  </div>
                </div>
                <!---->
                <!---->
              </div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="sd-transfer-operations"><button class="sd-btn sd-btn-secondary sd-btn-shape-round sd-btn-size-small sd-btn-status-normal sd-btn-disabled sd-btn-only-icon" type="button" disabled="" tabindex="-1" aria-label="Move selected right"><span class="sd-btn-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="m16 39.513 15.556-15.557L16 8.4"></path></svg></span></button><button class="sd-btn sd-btn-secondary sd-btn-shape-round sd-btn-size-small sd-btn-status-normal sd-btn-disabled sd-btn-only-icon" type="button" disabled="" tabindex="-1" aria-label="Move selected left"><span class="sd-btn-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M32 8.4 16.444 23.956 32 39.513"></path></svg></span></button></div>
  <div class="sd-transfer-view sd-transfer-view-target">
    <div class="sd-transfer-view-header"><span class="sd-transfer-view-header-title"><label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Target</span></label></span><span class="sd-transfer-view-header-count">0 / 3</span></div>
    <div class="sd-transfer-view-search"><span class="sd-input-wrapper sd-input-search"><!----><input class="sd-input sd-input-size-medium" type="text" placeholder="target item search" value=""><!----><span class="sd-input-suffix"><!----><span class="sd-icon-hover"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-search" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M33.072 33.071c6.248-6.248 6.248-16.379 0-22.627-6.249-6.249-16.38-6.249-22.628 0s-6.248 16.379 0 22.627 16.38 6.248 22.628 0Zm0 0 8.485 8.485"></path></svg></span>
      <!---->
      <!----></span></span>
    </div>
    <div class="sd-transfer-view-body">
      <div class="sd-scrollbar sd-scrollbar-type-embed">
        <div class="sd-scrollbar-container" data-overlayscrollbars="host">
          <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
            <div class="sd-list-wrapper sd-transfer-view-list">
              <div class="sd-spin sd-list-spin">
                <div class="sd-scrollbar sd-scrollbar-type-embed">
                  <div class="sd-scrollbar-container sd-list sd-list-medium sd-list-split" data-overlayscrollbars="host">
                    <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
                      <div class="sd-list-content-wrapper">
                        <!---->
                        <div role="list" class="sd-list-content">
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option1"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 1</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option3"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 3</span></label>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="option5"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Option 5</span></label>
                            <!---->
                          </div>
                          <!---->
                        </div>
                        <!---->
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                  </div>
                </div>
                <!---->
                <!---->
              </div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<transfer> demo: > render [simple] correctly 1`] = `
<div class="sd-transfer sd-transfer-simple">
  <div class="sd-transfer-view sd-transfer-view-source">
    <div class="sd-transfer-view-header"><span class="sd-transfer-view-header-title"><span class="sd-transfer-view-header-title-simple">Source</span></span>
      <!--v-if-->
    </div>
    <!--v-if-->
    <div class="sd-transfer-view-body">
      <div class="sd-scrollbar sd-scrollbar-type-embed">
        <div class="sd-scrollbar-container" data-overlayscrollbars="host">
          <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
            <div class="sd-list-wrapper sd-transfer-view-list">
              <div class="sd-spin sd-list-spin">
                <div class="sd-scrollbar sd-scrollbar-type-embed">
                  <div class="sd-scrollbar-container sd-list sd-list-medium sd-list-split" data-overlayscrollbars="host">
                    <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
                      <div class="sd-list-content-wrapper">
                        <!---->
                        <div role="list" class="sd-list-content">
                          <div class="sd-transfer-list-item"><span class="sd-transfer-list-item-content">Option 2</span>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><span class="sd-transfer-list-item-content">Option 4</span>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><span class="sd-transfer-list-item-content">Option 6</span>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><span class="sd-transfer-list-item-content">Option 7</span>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><span class="sd-transfer-list-item-content">Option 8</span>
                            <!---->
                          </div>
                          <!---->
                        </div>
                        <!---->
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                  </div>
                </div>
                <!---->
                <!---->
              </div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
  <div class="sd-transfer-view sd-transfer-view-target">
    <div class="sd-transfer-view-header"><span class="sd-transfer-view-header-title"><span class="sd-transfer-view-header-title-simple">Target</span></span>
      <!--v-if-->
    </div>
    <!--v-if-->
    <div class="sd-transfer-view-body">
      <div class="sd-scrollbar sd-scrollbar-type-embed">
        <div class="sd-scrollbar-container" data-overlayscrollbars="host">
          <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
            <div class="sd-list-wrapper sd-transfer-view-list">
              <div class="sd-spin sd-list-spin">
                <div class="sd-scrollbar sd-scrollbar-type-embed">
                  <div class="sd-scrollbar-container sd-list sd-list-medium sd-list-split" data-overlayscrollbars="host">
                    <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
                      <div class="sd-list-content-wrapper">
                        <!---->
                        <div role="list" class="sd-list-content">
                          <div class="sd-transfer-list-item"><span class="sd-transfer-list-item-content">Option 1</span>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><span class="sd-transfer-list-item-content">Option 3</span>
                            <!---->
                          </div>
                          <div class="sd-transfer-list-item"><span class="sd-transfer-list-item-content">Option 5</span>
                            <!---->
                          </div>
                          <!---->
                        </div>
                        <!---->
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                  </div>
                </div>
                <!---->
                <!---->
              </div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<transfer> demo: > render [tree] correctly 1`] = `
<div class="sd-transfer">
  <div class="sd-transfer-view sd-transfer-view-source">
    <div class="sd-transfer-view-header"><span class="sd-transfer-view-header-title"><label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Source</span></label></span><span class="sd-transfer-view-header-count">0 / 5</span></div>
    <!--v-if-->
    <div class="sd-transfer-view-body">
      <div class="sd-scrollbar sd-scrollbar-type-embed">
        <div class="sd-scrollbar-container" data-overlayscrollbars="host">
          <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
            <div class="sd-tree sd-tree-checkable sd-tree-size-medium">
              <div class="sd-tree-node sd-tree-node-expanded" data-level="0" data-key="0-0">
                <!-- 缩进 --><span class="sd-tree-node-indent"></span><!-- switcher --><span class="sd-tree-node-switcher sd-tree-node-switcher-expanded"><span class="sd-icon-hover sd-tree-node-icon-hover"><span class="sd-tree-node-switcher-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-caret-down" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path fill="currentColor" stroke="none" d="M24.938 34.829a1.2 1.2 0 0 1-1.875 0L9.56 17.949c-.628-.785-.069-1.949.937-1.949h27.007c1.006 0 1.565 1.164.937 1.95z"></path></svg></span></span></span><!-- checkbox --><label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span>
                  <!---->
                </label><!-- 内容 --><span class="sd-tree-node-title" draggable="false"><!--v-if--><span class="sd-tree-node-title-text"><!-- 标题，treeTitle 优先级高于节点的 title -->Trunk 0-0<!--v-if--></span></span><!-- 额外 -->
                <!--v-if-->
              </div>
              <transition-stub appear="false" persisted="false" css="true"></transition-stub>
              <div class="sd-tree-node sd-tree-node-is-leaf" data-level="1" data-key="0-0-1">
                <!-- 缩进 --><span class="sd-tree-node-indent"><span class="sd-tree-node-indent-block"></span></span><!-- switcher --><span class="sd-tree-node-switcher"><!----></span><!-- checkbox --><label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span>
                  <!---->
                </label><!-- 内容 --><span class="sd-tree-node-title" draggable="false"><!--v-if--><span class="sd-tree-node-title-text"><!-- 标题，treeTitle 优先级高于节点的 title -->Leaf 0-0-1<!--v-if--></span></span><!-- 额外 -->
                <!--v-if-->
              </div>
              <transition-stub appear="false" persisted="false" css="true"></transition-stub>
              <div class="sd-tree-node sd-tree-node-is-tail sd-tree-node-expanded" data-level="1" data-key="0-0-2">
                <!-- 缩进 --><span class="sd-tree-node-indent"><span class="sd-tree-node-indent-block"></span></span><!-- switcher --><span class="sd-tree-node-switcher sd-tree-node-switcher-expanded"><span class="sd-icon-hover sd-tree-node-icon-hover"><span class="sd-tree-node-switcher-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-caret-down" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path fill="currentColor" stroke="none" d="M24.938 34.829a1.2 1.2 0 0 1-1.875 0L9.56 17.949c-.628-.785-.069-1.949.937-1.949h27.007c1.006 0 1.565 1.164.937 1.95z"></path></svg></span></span></span><!-- checkbox --><label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span>
                  <!---->
                </label><!-- 内容 --><span class="sd-tree-node-title" draggable="false"><!--v-if--><span class="sd-tree-node-title-text"><!-- 标题，treeTitle 优先级高于节点的 title -->Branch 0-0-2<!--v-if--></span></span><!-- 额外 -->
                <!--v-if-->
              </div>
              <transition-stub appear="false" persisted="false" css="true"></transition-stub>
              <div class="sd-tree-node sd-tree-node-is-leaf sd-tree-node-is-tail" data-level="2" data-key="0-0-2-2">
                <!-- 缩进 --><span class="sd-tree-node-indent"><span class="sd-tree-node-indent-block"></span><span class="sd-tree-node-indent-block sd-tree-node-indent-block-lineless"></span></span><!-- switcher --><span class="sd-tree-node-switcher"><!----></span><!-- checkbox --><label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span>
                  <!---->
                </label><!-- 内容 --><span class="sd-tree-node-title" draggable="false"><!--v-if--><span class="sd-tree-node-title-text"><!-- 标题，treeTitle 优先级高于节点的 title -->Leaf 0-0-2-2<!--v-if--></span></span><!-- 额外 -->
                <!--v-if-->
              </div>
              <transition-stub appear="false" persisted="false" css="true"></transition-stub>
              <div class="sd-tree-node sd-tree-node-is-tail sd-tree-node-expanded" data-level="0" data-key="0-1">
                <!-- 缩进 --><span class="sd-tree-node-indent"></span><!-- switcher --><span class="sd-tree-node-switcher sd-tree-node-switcher-expanded"><span class="sd-icon-hover sd-tree-node-icon-hover"><span class="sd-tree-node-switcher-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-caret-down" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path fill="currentColor" stroke="none" d="M24.938 34.829a1.2 1.2 0 0 1-1.875 0L9.56 17.949c-.628-.785-.069-1.949.937-1.949h27.007c1.006 0 1.565 1.164.937 1.95z"></path></svg></span></span></span><!-- checkbox --><label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span>
                  <!---->
                </label><!-- 内容 --><span class="sd-tree-node-title" draggable="false"><!--v-if--><span class="sd-tree-node-title-text"><!-- 标题，treeTitle 优先级高于节点的 title -->Trunk 0-1<!--v-if--></span></span><!-- 额外 -->
                <!--v-if-->
              </div>
              <transition-stub appear="false" persisted="false" css="true"></transition-stub>
              <div class="sd-tree-node sd-tree-node-expanded" data-level="1" data-key="0-1-1">
                <!-- 缩进 --><span class="sd-tree-node-indent"><span class="sd-tree-node-indent-block sd-tree-node-indent-block-lineless"></span></span><!-- switcher --><span class="sd-tree-node-switcher sd-tree-node-switcher-expanded"><span class="sd-icon-hover sd-tree-node-icon-hover"><span class="sd-tree-node-switcher-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-caret-down" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path fill="currentColor" stroke="none" d="M24.938 34.829a1.2 1.2 0 0 1-1.875 0L9.56 17.949c-.628-.785-.069-1.949.937-1.949h27.007c1.006 0 1.565 1.164.937 1.95z"></path></svg></span></span></span><!-- checkbox --><label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span>
                  <!---->
                </label><!-- 内容 --><span class="sd-tree-node-title" draggable="false"><!--v-if--><span class="sd-tree-node-title-text"><!-- 标题，treeTitle 优先级高于节点的 title -->Branch 0-1-1<!--v-if--></span></span><!-- 额外 -->
                <!--v-if-->
              </div>
              <transition-stub appear="false" persisted="false" css="true"></transition-stub>
              <div class="sd-tree-node sd-tree-node-is-leaf" data-level="2" data-key="0-1-1-1">
                <!-- 缩进 --><span class="sd-tree-node-indent"><span class="sd-tree-node-indent-block sd-tree-node-indent-block-lineless"></span><span class="sd-tree-node-indent-block"></span></span><!-- switcher --><span class="sd-tree-node-switcher"><!----></span><!-- checkbox --><label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span>
                  <!---->
                </label><!-- 内容 --><span class="sd-tree-node-title" draggable="false"><!--v-if--><span class="sd-tree-node-title-text"><!-- 标题，treeTitle 优先级高于节点的 title -->Leaf 0-1-1-1<!--v-if--></span></span><!-- 额外 -->
                <!--v-if-->
              </div>
              <transition-stub appear="false" persisted="false" css="true"></transition-stub>
              <div class="sd-tree-node sd-tree-node-is-leaf sd-tree-node-is-tail" data-level="2" data-key="0-1-1-2">
                <!-- 缩进 --><span class="sd-tree-node-indent"><span class="sd-tree-node-indent-block sd-tree-node-indent-block-lineless"></span><span class="sd-tree-node-indent-block"></span></span><!-- switcher --><span class="sd-tree-node-switcher"><!----></span><!-- checkbox --><label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span>
                  <!---->
                </label><!-- 内容 --><span class="sd-tree-node-title" draggable="false"><!--v-if--><span class="sd-tree-node-title-text"><!-- 标题，treeTitle 优先级高于节点的 title -->Leaf 0-1-1-2<!--v-if--></span></span><!-- 额外 -->
                <!--v-if-->
              </div>
              <transition-stub appear="false" persisted="false" css="true"></transition-stub>
              <div class="sd-tree-node sd-tree-node-is-leaf sd-tree-node-is-tail" data-level="1" data-key="0-1-2">
                <!-- 缩进 --><span class="sd-tree-node-indent"><span class="sd-tree-node-indent-block sd-tree-node-indent-block-lineless"></span></span><!-- switcher --><span class="sd-tree-node-switcher"><!----></span><!-- checkbox --><label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span>
                  <!---->
                </label><!-- 内容 --><span class="sd-tree-node-title" draggable="false"><!--v-if--><span class="sd-tree-node-title-text"><!-- 标题，treeTitle 优先级高于节点的 title -->Leaf 0-1-2<!--v-if--></span></span><!-- 额外 -->
                <!--v-if-->
              </div>
              <transition-stub appear="false" persisted="false" css="true"></transition-stub>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="sd-transfer-operations"><button class="sd-btn sd-btn-secondary sd-btn-shape-round sd-btn-size-small sd-btn-status-normal sd-btn-disabled sd-btn-only-icon" type="button" disabled="" tabindex="-1" aria-label="Move selected right"><span class="sd-btn-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="m16 39.513 15.556-15.557L16 8.4"></path></svg></span></button><button class="sd-btn sd-btn-secondary sd-btn-shape-round sd-btn-size-small sd-btn-status-normal sd-btn-disabled sd-btn-only-icon" type="button" disabled="" tabindex="-1" aria-label="Move selected left"><span class="sd-btn-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M32 8.4 16.444 23.956 32 39.513"></path></svg></span></button></div>
  <div class="sd-transfer-view sd-transfer-view-target">
    <div class="sd-transfer-view-header"><span class="sd-transfer-view-header-title"><label class="sd-checkbox"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Target</span></label></span><span class="sd-transfer-view-header-count">0 / 1</span></div>
    <!--v-if-->
    <div class="sd-transfer-view-body">
      <div class="sd-scrollbar sd-scrollbar-type-embed">
        <div class="sd-scrollbar-container" data-overlayscrollbars="host">
          <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
            <div class="sd-list-wrapper sd-transfer-view-list">
              <div class="sd-spin sd-list-spin">
                <div class="sd-scrollbar sd-scrollbar-type-embed">
                  <div class="sd-scrollbar-container sd-list sd-list-medium sd-list-split" data-overlayscrollbars="host">
                    <div class="" data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden" tabindex="-1" style="top: 0px; right: auto; left: 0px; width: calc(100% + 0px); margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px;">
                      <div class="sd-list-content-wrapper">
                        <!---->
                        <div role="list" class="sd-list-content">
                          <div class="sd-transfer-list-item"><label class="sd-checkbox sd-transfer-list-item-content sd-transfer-list-item-checkbox"><input type="checkbox" class="sd-checkbox-target" value="0-0-2-1"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">Leaf 0-0-2-1</span></label>
                            <!---->
                          </div>
                          <!---->
                        </div>
                        <!---->
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                    <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
                      <div class="os-scrollbar-track">
                        <div class="os-scrollbar-handle"></div>
                      </div>
                    </div>
                  </div>
                </div>
                <!---->
                <!---->
              </div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
          <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-track-interactive os-scrollbar-cornerless os-scrollbar-unusable sd-scrollbar-theme-embed" style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;">
            <div class="os-scrollbar-track">
              <div class="os-scrollbar-handle"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
